--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   "h h"
   "n c"
   "f f";
-
+  font-size: .85em;
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   /* grid-gap: 10px; */
